plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.146'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    accessTransformers.from("src/main/resources/META-INF/accesstransformer.cfg")

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            systemProperty 'fml.earlydisplay', 'true'
            systemProperty 'org.lwjgl.util.Debug', 'false'
            systemProperty 'org.lwjgl.util.DebugAllocator', 'false'
            // NeoForge initializes LWJGL before Minecraft's Main mixin runs.
            systemProperty 'org.lwjgl.system.stackSize', '256'
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
    }

    mods {
        vulkanmod {
            sourceSet sourceSets.main
        }
    }
}

project.ext.lwjglVersion = "3.4.1"
project.ext.jomlVersion = "1.10.4"
project.ext.bundledNatives = ["natives-windows", "natives-linux", "natives-macos", "natives-macos-arm64"]

def host = org.gradle.internal.os.OperatingSystem.current()
project.ext.devNatives = host.windows ? "natives-windows"
        : host.macOsX ? (System.getProperty("os.arch").contains("aarch64") ? "natives-macos-arm64" : "natives-macos")
        : "natives-linux"

dependencies {
    // Standard LWJGL for Vulkan
    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-shaderc:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-spvc:$lwjglVersion"
    implementation "org.lwjgl:lwjgl-vma:$lwjglVersion"

    runtimeOnly "org.lwjgl:lwjgl-shaderc:$lwjglVersion:$devNatives"
    runtimeOnly "org.lwjgl:lwjgl-spvc:$lwjglVersion:$devNatives"
    runtimeOnly "org.lwjgl:lwjgl-vma:$lwjglVersion:$devNatives"

    // Bundle them for production via JarJar
    jarJar "org.lwjgl:lwjgl-vulkan:$lwjglVersion"
    jarJar "org.lwjgl:lwjgl-shaderc:$lwjglVersion"
    jarJar "org.lwjgl:lwjgl-spvc:$lwjglVersion"
    jarJar "org.lwjgl:lwjgl-vma:$lwjglVersion"
    bundledNatives.each { n ->
        jarJar "org.lwjgl:lwjgl-shaderc:$lwjglVersion:$n"
        jarJar "org.lwjgl:lwjgl-spvc:$lwjglVersion:$n"
        jarJar "org.lwjgl:lwjgl-vma:$lwjglVersion:$n"
    }

    // MoltenVK for macOS
    jarJar "org.lwjgl:lwjgl-vulkan:$lwjglVersion:natives-macos"
    jarJar "org.lwjgl:lwjgl-vulkan:$lwjglVersion:natives-macos-arm64"
    runtimeOnly "org.lwjgl:lwjgl-vulkan:$lwjglVersion:natives-macos"
    runtimeOnly "org.lwjgl:lwjgl-vulkan:$lwjglVersion:natives-macos-arm64"
}

// Ensure JarJar only contains what we want
configurations.jarJar {
    exclude group: 'org.lwjgl', module: 'lwjgl'
    exclude group: 'org.lwjgl', module: 'lwjgl-glfw'
    exclude group: 'org.lwjgl', module: 'lwjgl-opengl'
    exclude group: 'org.lwjgl', module: 'lwjgl-stb'
}

processResources {
    inputs.property "version", project.version

    filesMatching("META-INF/neoforge.mods.toml") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}

// Post-process: strip module-info.class from embedded LWJGL JarJar jars.
// Without this, lwjgl-vulkan ends up in its own JPMS module layer,
// invisible to org.lwjgl.glfw in the boot layer, causing:
//   NoClassDefFoundError: org/lwjgl/vulkan/VkInstance
tasks.named('jar') {
    doLast {
        def jarFile = archiveFile.get().asFile
        def tmpDir = new File(temporaryDir, "repack")

        // Extract the fat jar
        tmpDir.deleteDir()
        tmpDir.mkdirs()
        ant.unzip(src: jarFile, dest: tmpDir)

        // Strip module-info.class from each embedded LWJGL jar
        def jarjarDir = new File(tmpDir, "META-INF/jarjar")
        if (jarjarDir.exists()) {
            jarjarDir.listFiles().findAll { it.name.endsWith('.jar') && it.name.startsWith('lwjgl-') }.each { embeddedJar ->
                def stripped = new File(temporaryDir, "stripped-${embeddedJar.name}")
                ant.zip(destfile: stripped) {
                    zipfileset(src: embeddedJar) {
                        exclude(name: 'module-info.class')
                        exclude(name: 'META-INF/versions/*/module-info.class')
                    }
                }
                embeddedJar.delete()
                stripped.renameTo(embeddedJar)
            }

            // Fix metadata.json because NeoForge JarJar generates duplicate identifiers for natives
            def metadataFile = new File(jarjarDir, "metadata.json")
            if (metadataFile.exists()) {
                def slurper = new groovy.json.JsonSlurper()
                def metadata = slurper.parseText(metadataFile.text)
                metadata.jars.each { jarEntry ->
                    def m = (jarEntry.path =~ /-(natives-[a-z0-9-]+)\.jar$/)
                    if (m) {
                        jarEntry.identifier.artifact += "-" + m[0][1]
                    }
                }
                metadataFile.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(metadata))
            }
        }

        // Repack
        jarFile.delete()
        ant.zip(destfile: jarFile, basedir: tmpDir)
    }
}
